# keti

./: CMakeLists.txt  sample.cpp  segnet.md  segnetOnly.cpp  semantic12.txt
src/: basicStructure.hpp  crf_refine.cpp  crf_refine.cpp~  crf_refine.hpp  fcn.cpp~  image.h  matrix_.cpp~  matrix_.h~  quadmatcher.cpp  quadmatcher.hpp  readFile.h  segnet.cpp  segnet.cpp~  segnet.hpp~  stereo.cpp  stereo.hpp  utils.cpp  utils.h  utils.h~  uvdisparity.cpp  uvdisparity.hpp  vo.cpp  vo.cpp~  vo_stereo.cpp  vo_stereo.hpp
